# vscode_claude

./: README.md  eslint.config.js  package-lock.json  package.json  tmp_after_rebuild_client_event.txt  tmp_after_rebuild_client_mark.txt  tmp_after_rebuild_mark.txt  tmp_noload_stamp.txt  tmp_qtcreator_debug_probe.txt  tmp_run_client_probe.txt  tmp_run_probe.txt  tmp_run_probe15.txt  tsconfig.json
backup/QtCreator_Reports/: QtCreator_Code_Review_Report.md  qt-creator-4.13.3-downgrade-to-qt5.5.1-msvc2013-feasibility.md  qt-creator-6.0.2-framework-report.md  qt-creator-6.0.2-qt-version-requirements.md  qt-creator-6.0.2-qt5.5.1-api-compat-audit.md
backup/qtcreator-src/: .tag
qtcreator/: .gitignore  BUILD_README.md  README.md  build.bat  build_all.bat  debug.bat  deploy.bat  env_setup.bat
qtcreator/QtCreator_Reports/: HldPlugin项目概要.md  qt-creator-4.13.3-cmake-qbs-reference-audit.md  qt-creator-4.13.3-code-audit-report.md  qt-creator-4.13.3-downgrade-to-qt5.6.3-msvc2015-feasibility.md  qt-creator-4.13.3-framework-report.md  qt-creator-4.13.3-msvc-environment-detection-report.md  qt-creator-4.13.3-msvc2013-cpp11-audit.md  qt-creator-4.13.3-plugin-system-extraction-plan.md  qt-creator-4.13.3-plugin-trim-record-001-studiowelcome.md  qt-creator-4.13.3-remove-cmake-detailed-steps.md  qt-creator-4.13.3-remove-cmake-qbs-guide.md  qt-creator-6.0.2-cpp17-feature-audit.md  (+6 more)
qtcreator/qt-creator-opensource-src-4.13.3/src/plugins/mcusupport/wizards/application/: CMakeLists.txt
src/: chatPanel.ts  claudeClient.ts  contextCollector.ts  extension.ts  inlineCompletion.ts  logger.ts
(+7970 files in other folders)
